--- a/index.html
+++ b/index.html
@@ -4,268 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vicsta - IOT Club | VIT Pune</title>
-    <meta name="description" content="Vicsta is the departmental IOT club of VIT Pune, connecting physical and digital worlds through innovative technology.">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Main Club Page -->
-    <div id="clubPage" class="min-h-screen gradient-bg">
-        <div class="container mx-auto px-4 py-8 relative z-10">
+    <div id="clubPage" class="page">
+        <div class="container">
             <!-- Header -->
-            <header class="main-header">
-                <div class="flex justify-center items-center gap-4 mb-8">
-                    <div class="logo-icon">
-                        <span class="text-2xl text-white">⚡</span>
-                    </div>
-                    <h1 class="text-5xl font-bold text-gradient text-shadow-lg">
-                        VICSTA
-                    </h1>
-                </div>
-                <div class="club-badge">
-                    <p class="text-xl font-bold text-white mb-2">
-                        Departmental IoT Club
-                    </p>
-                    <p class="text-base text-white/90 flex items-center justify-center gap-2">
-                        <span class="w-2 h-2 bg-blue-400 rounded-full"></span>
-                        VIT Pune
-                        <span class="w-2 h-2 bg-red-400 rounded-full"></span>
-                    </p>
-                </div>
+            <header class="header">
+                <h1>VICSTA</h1>
+                <p>Departmental IoT Club - VIT Pune</p>
             </header>
 
             <!-- Main Content -->
-            <main class="max-w-6xl mx-auto space-y-12">
+            <main class="main-content">
                 <!-- Welcome Section -->
-                <section class="card fade-in">
-                    <div class="text-center mb-12">
-                        <h2 class="text-4xl font-bold text-gray-800 mb-4">
-                            Welcome to Vicsta IoT Club!
-                            <span class="text-5xl ml-3 animate-bounce">🚀</span>
-                        </h2>
-                        <p class="text-xl text-gray-600 max-w-3xl mx-auto leading-relaxed">
-                            Empowering innovation through Internet of Things technology. We connect minds, ideas, and devices to build the future.
-                        </p>
-                    </div>
+                <section class="welcome-section">
+                    <h2>Welcome to Vicsta IoT Club! 🚀</h2>
+                    <p>Empowering innovation through Internet of Things technology. We connect minds, ideas, and devices to build the future.</p>
                     
-                    <!-- Feature Cards -->
-                    <div class="feature-grid">
-                        <div class="card-feature bg-gradient-to-br from-blue-50 to-blue-100 border-blue-200">
-                            <div class="icon-box bg-blue-600 text-white mx-auto mb-4">
-                                <span class="text-2xl">🔧</span>
-                            </div>
-                            <h3 class="text-xl font-bold text-gray-800 mb-3">Innovation Hub</h3>
-                            <p class="text-base text-gray-600 leading-relaxed">
-                                State-of-the-art IoT lab with cutting-edge sensors, microcontrollers, and development boards for hands-on learning.
-                            </p>
+                    <!-- Info Cards -->
+                    <div class="info-cards">
+                        <div class="card">
+                            <div class="icon">🔧</div>
+                            <h3>Innovation</h3>
+                            <p>Hands-on IoT projects and learning</p>
                         </div>
-
-                        <div class="card-feature bg-gradient-to-br from-red-50 to-red-100 border-red-200">
-                            <div class="icon-box bg-red-600 text-white mx-auto mb-4">
-                                <span class="text-2xl">🌐</span>
-                            </div>
-                            <h3 class="text-xl font-bold text-gray-800 mb-3">Global Network</h3>
-                            <p class="text-base text-gray-600 leading-relaxed">
-                                Connected with industry leaders and tech communities worldwide to bring real-world experience to our members.
-                            </p>
+                        <div class="card">
+                            <div class="icon">🌐</div>
+                            <h3>Network</h3>
+                            <p>Connected tech community</p>
                         </div>
-
-                        <div class="card-feature bg-gradient-to-br from-green-50 to-green-100 border-green-200">
-                            <div class="icon-box bg-green-600 text-white mx-auto mb-4">
-                                <span class="text-2xl">🎯</span>
-                            </div>
-                            <h3 class="text-xl font-bold text-gray-800 mb-3">Career Focus</h3>
-                            <p class="text-base text-gray-600 leading-relaxed">
-                                Industry mentorship, internship opportunities, and skill development programs to launch your tech career.
-                            </p>
+                        <div class="card">
+                            <div class="icon">🎯</div>
+                            <h3>Growth</h3>
+                            <p>Skill development programs</p>
                         </div>
-                    </div>
-                </section>
-
-                <!-- Activities and Achievements -->
-                <section class="grid md:grid-cols-2 gap-8">
-                    <div class="achievement-card bg-gradient-to-br from-blue-600 to-blue-800">
-                        <h3 class="text-2xl font-bold mb-6 flex items-center gap-3">
-                            <span class="text-3xl">💡</span>
-                            What We Do
-                        </h3>
-                        <ul class="space-y-4">
-                            <li class="flex items-center gap-3">
-                                <span class="w-2 h-2 bg-yellow-400 rounded-full flex-shrink-0"></span>
-                                <span>IoT Project Development & Prototyping</span>
-                            </li>
-                            <li class="flex items-center gap-3">
-                                <span class="w-2 h-2 bg-yellow-400 rounded-full flex-shrink-0"></span>
-                                <span>Technical Workshops & Industry Sessions</span>
-                            </li>
-                            <li class="flex items-center gap-3">
-                                <span class="w-2 h-2 bg-yellow-400 rounded-full flex-shrink-0"></span>
-                                <span>National & International Hackathons</span>
-                            </li>
-                            <li class="flex items-center gap-3">
-                                <span class="w-2 h-2 bg-yellow-400 rounded-full flex-shrink-0"></span>
-                                <span>Research Collaboration & Publications</span>
-                            </li>
-                            <li class="flex items-center gap-3">
-                                <span class="w-2 h-2 bg-yellow-400 rounded-full flex-shrink-0"></span>
-                                <span>Industry Partnerships & Internships</span>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="achievement-card bg-gradient-to-br from-red-500 to-red-700">
-                        <h3 class="text-2xl font-bold mb-6 flex items-center gap-3">
-                            <span class="text-3xl">🏆</span>
-                            Our Achievements
-                        </h3>
-                        <ul class="space-y-4">
-                            <li class="flex items-center gap-3">
-                                <span class="w-2 h-2 bg-yellow-400 rounded-full flex-shrink-0"></span>
-                                <span>50+ Successful IoT Projects Deployed</span>
-                            </li>
-                            <li class="flex items-center gap-3">
-                                <span class="w-2 h-2 bg-yellow-400 rounded-full flex-shrink-0"></span>
-                                <span>Winner of National IoT Innovation Contest</span>
-                            </li>
-                            <li class="flex items-center gap-3">
-                                <span class="w-2 h-2 bg-yellow-400 rounded-full flex-shrink-0"></span>
-                                <span>Published 20+ Research Papers</span>
-                            </li>
-                            <li class="flex items-center gap-3">
-                                <span class="w-2 h-2 bg-yellow-400 rounded-full flex-shrink-0"></span>
-                                <span>Partnerships with Google, Microsoft, AWS</span>
-                            </li>
-                            <li class="flex items-center gap-3">
-                                <span class="w-2 h-2 bg-yellow-400 rounded-full flex-shrink-0"></span>
-                                <span>100% Placement Rate for Active Members</span>
-                            </li>
-                        </ul>
                     </div>
                 </section>
 
                 <!-- Game CTA -->
-                <section class="text-center">
+                <section class="game-section">
                     <div class="game-cta">
-                        <div class="text-6xl mb-6 animate-float">🎮</div>
-                        <h3 class="text-3xl font-bold text-white mb-4">Ready for a Challenge?</h3>
-                        <p class="text-xl text-white/90 mb-8 max-w-2xl mx-auto">
-                            Test your cognitive skills with our IoT Memory Challenge! A fun way to exercise your brain while learning about IoT technologies.
-                        </p>
-                        <button id="startGameBtn" class="bg-white text-gray-800 font-bold py-4 px-10 rounded-2xl hover:bg-gray-100 transition-all duration-300 transform hover:scale-110 shadow-large text-lg">
-                            Start Memory Challenge 🧠
-                        </button>
+                        <div class="game-icon">🧠</div>
+                        <h3>Test Your Memory!</h3>
+                        <p>Challenge yourself with our IoT Memory Game and see how well you can remember technology symbols.</p>
+                        <a href="game.html" class="btn-primary">Start Memory Challenge 🎮</a>
                     </div>
                 </section>
             </main>
 
             <!-- Footer -->
-            <footer class="text-center mt-16 py-8 relative z-10">
-                <div class="footer-dots">
-                    <span class="footer-dot bg-blue-400"></span>
-                    <span class="footer-dot bg-red-400"></span>
-                    <span class="footer-dot bg-yellow-400"></span>
-                    <span class="footer-dot bg-green-400"></span>
-                </div>
-                <p class="text-white font-semibold text-lg mb-2">© 2024 Vicsta IoT Club - VIT Pune</p>
-                <p class="text-white/80">Building tomorrow's connected world, today.</p>
+            <footer class="footer">
+                <p>© 2024 Vicsta IoT Club - VIT Pune</p>
+                <p>Building tomorrow's connected world, today.</p>
             </footer>
-        </div>
-    </div>
-
-    <!-- Game Page -->
-    <div id="gamePage" class="min-h-screen gradient-bg p-4 relative z-10" style="display: none;">
-        <div class="container mx-auto max-w-4xl">
-            <!-- Game Header -->
-            <div class="flex justify-between items-center mb-8 gap-4">
-                <button id="backToClubBtn" class="btn-secondary flex items-center gap-2 glass-strong text-white border-white/30 hover:bg-white/20">
-                    <span class="text-xl">←</span>
-                    <span class="font-medium">Back to Club</span>
-                </button>
-
-                <div class="text-center">
-                    <h1 class="text-4xl font-bold text-white mb-2 text-shadow-lg">IoT Memory Challenge</h1>
-                    <p class="text-white/90">Match the technology pairs!</p>
-                </div>
-
-                <div class="card bg-white/20 backdrop-blur-md border-white/30 text-white min-w-[140px]">
-                    <div class="text-sm mb-1">
-                        Moves: <span id="movesCount" class="font-bold text-yellow-300">0</span>
-                    </div>
-                    <div class="text-sm">
-                        Time: <span id="timeCount" class="font-bold text-green-300">0:00</span>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Game Content -->
-            <div class="card bg-white/95 backdrop-blur-sm">
-                <!-- Start Screen -->
-                <div id="startScreen" class="text-center py-16">
-                    <div class="text-6xl mb-6 animate-float">🧠</div>
-                    <h2 class="text-3xl font-bold text-gray-800 mb-4">IoT Memory Challenge</h2>
-                    <p class="text-lg text-gray-600 mb-8 max-w-md mx-auto leading-relaxed">
-                        Test your memory by matching pairs of IoT technology symbols. Challenge yourself to complete it in the fewest moves!
-                    </p>
-                    <button id="startChallengeBtn" class="btn-primary text-lg px-8 py-4">
-                        Start Challenge
-                    </button>
-                </div>
-
-                <!-- Game Grid -->
-                <div id="gameGrid" class="grid grid-cols-4 gap-3 p-2" style="display: none;"></div>
-
-                <!-- Win Screen -->
-                <div id="winScreen" class="text-center py-16" style="display: none;">
-                    <div class="text-6xl mb-6 animate-bounce">🎉</div>
-                    <h2 class="text-3xl font-bold text-gray-800 mb-4">Congratulations!</h2>
-                    <div class="text-lg text-gray-600 mb-8 space-y-2">
-                        <p>
-                            You completed the challenge in <span id="finalMoves" class="font-bold text-blue-600">0</span> moves
-                        </p>
-                        <p>
-                            Time taken: <span id="finalTime" class="font-bold text-green-600">0:00</span>
-                        </p>
-                    </div>
-                    <button id="playAgainBtn" class="bg-green-600 text-white font-bold py-4 px-8 rounded-xl hover:bg-green-700 transition-all duration-300 transform hover:scale-105 shadow-medium">
-                        Play Again
-                    </button>
-                </div>
-            </div>
-
-            <!-- Instructions -->
-            <div class="card bg-white/95 backdrop-blur-sm mt-8">
-                <h3 class="text-xl font-bold text-gray-800 mb-4 flex items-center gap-2">
-                    <span class="text-2xl">📋</span>
-                    How to Play:
-                </h3>
-                <div class="grid md:grid-cols-2 gap-6 text-gray-600">
-                    <ul class="space-y-3">
-                        <li class="flex items-center gap-3">
-                            <span class="w-3 h-3 bg-blue-500 rounded-full flex-shrink-0"></span>
-                            Click cards to reveal IoT technology symbols
-                        </li>
-                        <li class="flex items-center gap-3">
-                            <span class="w-3 h-3 bg-red-500 rounded-full flex-shrink-0"></span>
-                            Match two cards with the same symbol
-                        </li>
-                    </ul>
-                    <ul class="space-y-3">
-                        <li class="flex items-center gap-3">
-                            <span class="w-3 h-3 bg-yellow-500 rounded-full flex-shrink-0"></span>
-                            Complete all pairs to win the challenge
-                        </li>
-                        <li class="flex items-center gap-3">
-                            <span class="w-3 h-3 bg-green-500 rounded-full flex-shrink-0"></span>
-                            Try to minimize your moves and time!
-                        </li>
-                    </ul>
-                </div>
-            </div>
         </div>
     </div>
 
     <script src="script.js"></script>
 </body>
 </html>
+         
+
+    <script src="script.js"></script>
+</body>
+
