--- a/index.html
+++ b/index.html
@@ -3,59 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vicsta - IOT Club | VIT Pune</title>
+    <meta name="description" content="Vicsta IoT Club at VIT Pune - Empowering innovation through Internet of Things technology">
+    <title>Vicsta - IoT Club | VIT Pune</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
-    <!-- Main Club Page -->
     <div id="clubPage" class="page">
         <div class="container">
             <!-- Header -->
-            <header class="header">
+            <header class="header" role="banner">
                 <h1>VICSTA</h1>
                 <p>Departmental IoT Club - VIT Pune</p>
             </header>
 
             <!-- Main Content -->
-            <main class="main-content">
+            <main class="main-content" role="main">
                 <!-- Welcome Section -->
-                <section class="welcome-section">
+                <section class="welcome-section elevation-1 fade-in">
                     <h2>Welcome to Vicsta IoT Club! 🚀</h2>
                     <p>Empowering innovation through Internet of Things technology. We connect minds, ideas, and devices to build the future.</p>
                     
                     <!-- Info Cards -->
                     <div class="info-cards">
-                        <div class="card">
-                            <div class="icon">🔧</div>
+                        <article class="card fade-in">
+                            <div class="icon" aria-hidden="true">🔧</div>
                             <h3>Innovation</h3>
-                            <p>Hands-on IoT projects and learning</p>
-                        </div>
-                        <div class="card">
-                            <div class="icon">🌐</div>
+                            <p>Hands-on IoT projects and learning experiences to spark creativity</p>
+                        </article>
+                        <article class="card fade-in">
+                            <div class="icon" aria-hidden="true">🌐</div>
                             <h3>Network</h3>
-                            <p>Connected tech community</p>
-                        </div>
-                        <div class="card">
-                            <div class="icon">🎯</div>
+                            <p>Connected tech community building the future together</p>
+                        </article>
+                        <article class="card fade-in">
+                            <div class="icon" aria-hidden="true">🎯</div>
                             <h3>Growth</h3>
-                            <p>Skill development programs</p>
-                        </div>
+                            <p>Comprehensive skill development and mentorship programs</p>
+                        </article>
                     </div>
                 </section>
 
                 <!-- Game CTA -->
-                <section class="game-section">
-                    <div class="game-cta">
-                        <div class="game-icon">🧠</div>
-                        <h3>Test Your Memory!</h3>
-                        <p>Challenge yourself with our IoT Memory Game and see how well you can remember technology symbols.</p>
-                        <a href="game.html" class="btn-primary">Start Memory Challenge 🎮</a>
+                <section class="game-section fade-in">
+                    <div class="game-cta elevation-2">
+                        <div class="game-icon" aria-hidden="true">🔐</div>
+                        <h3>Test Your Knowledge!</h3>
+                        <p>Challenge yourself with our Password Challenge. Use general knowledge to crack the 4-digit code and test your problem-solving skills!</p>
+                        <a href="game.html" class="btn-primary" role="button">
+                            Start Password Challenge 🧩
+                        </a>
                     </div>
                 </section>
             </main>
 
             <!-- Footer -->
-            <footer class="footer">
+            <footer class="footer" role="contentinfo">
                 <p>© 2025 Vicsta IoT Club - VIT Pune</p>
                 <p>Building tomorrow's connected world, today.</p>
             </footer>
