--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Vicsta IoT Club at VIT Pune - Empowering innovation through Internet of Things technology">
-    <title>Vicsta - IoT Club | VIT Pune</title>
+    <meta name="description" content="Vicsta Tech Club at VIT Pune - IoT, Cyber Security & Blockchain innovation hub">
+    <title>Vicsta - Tech Club | VIT Pune</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,32 +15,32 @@
             <!-- Header -->
             <header class="header" role="banner">
                 <h1>VICSTA</h1>
-                <p>Departmental IoT Club - VIT Pune</p>
+                <p>Tech Innovation Club - VIT Pune</p>
             </header>
 
             <!-- Main Content -->
             <main class="main-content" role="main">
                 <!-- Welcome Section -->
                 <section class="welcome-section elevation-1 fade-in">
-                    <h2>Welcome to Vicsta IoT Club! 🚀</h2>
-                    <p>Empowering innovation through Internet of Things technology. We connect minds, ideas, and devices to build the future.</p>
+                    <h2>Welcome to Vicsta Tech Club</h2>
+                    <p>Pioneering the future through IoT, Cyber Security, and Blockchain technology. We connect minds, secure systems, and build decentralized solutions for tomorrow's digital world.</p>
                     
                     <!-- Info Cards -->
                     <div class="info-cards">
                         <article class="card fade-in">
-                            <div class="icon" aria-hidden="true">🔧</div>
-                            <h3>Innovation</h3>
-                            <p>Hands-on IoT projects and learning experiences to spark creativity</p>
-                        </article>
-                        <article class="card fade-in">
                             <div class="icon" aria-hidden="true">🌐</div>
-                            <h3>Network</h3>
-                            <p>Connected tech community building the future together</p>
+                            <h3>Internet of Things</h3>
+                            <p>Connected devices, smart systems, and innovative IoT solutions for real-world problems</p>
                         </article>
                         <article class="card fade-in">
-                            <div class="icon" aria-hidden="true">🎯</div>
-                            <h3>Growth</h3>
-                            <p>Comprehensive skill development and mentorship programs</p>
+                            <div class="icon" aria-hidden="true">🔒</div>
+                            <h3>Cyber Security</h3>
+                            <p>Digital defense, ethical hacking, and security research to protect our connected world</p>
+                        </article>
+                        <article class="card fade-in">
+                            <div class="icon" aria-hidden="true">⛓️</div>
+                            <h3>Blockchain</h3>
+                            <p>Decentralized systems, cryptocurrency, and distributed ledger technologies</p>
                         </article>
                     </div>
                 </section>
@@ -49,10 +49,10 @@
                 <section class="game-section fade-in">
                     <div class="game-cta elevation-2">
                         <div class="game-icon" aria-hidden="true">🔐</div>
-                        <h3>Test Your Knowledge!</h3>
-                        <p>Challenge yourself with our Password Challenge. Use general knowledge to crack the 4-digit code and test your problem-solving skills!</p>
+                        <h3>Test Your Tech Knowledge</h3>
+                        <p>Challenge yourself with our Password Challenge game. Use your general knowledge and problem-solving skills to crack the 4-digit code!</p>
                         <a href="game.html" class="btn-primary" role="button">
-                            Start Password Challenge 🧩
+                            <span>Start Password Challenge</span>
                         </a>
                     </div>
                 </section>
@@ -60,8 +60,8 @@
 
             <!-- Footer -->
             <footer class="footer" role="contentinfo">
-                <p>© 2025 Vicsta IoT Club - VIT Pune</p>
-                <p>Building tomorrow's connected world, today.</p>
+                <p>© 2025 Vicsta Tech Club - VIT Pune</p>
+                <p>Building tomorrow's secure, connected, and decentralized world</p>
             </footer>
         </div>
     </div>
